k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cogni-graph-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 215288576473.dkr.ecr.ap-southeast-1.amazonaws.com/cogni-graph-api:latest
          command: ["/bin/sh", "-c"]
          args:
            - "alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000"
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cogni-graph-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: 215288576473.dkr.ecr.ap-southeast-1.amazonaws.com/cogni-graph-api:latest
          command: ["/bin/sh", "-c"]
          args:
            - "celery -A src.celery_worker.celery_app worker --loglevel=info"
